test/libsolidity/syntaxTests/types/address/address_literal_to_payable_err.sol
contract C {
    function f() public pure {
        address payable a = address(0x00000000219ab540356cBB839Cbe05303d7705Fa);
        address payable b = 0x00000000219ab540356cBB839Cbe05303d7705Fa;
    }
}
// ----
// TypeError 9574: (52-123): Type address is not implicitly convertible to expected type address payable.
// TypeError 9574: (133-195): Type address is not implicitly convertible to expected type address payable.
